<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.com.clupp.llenado_datos.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen_izq"
        android:layout_marginStart="@dimen/margen_izq">

        <EditText
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen_izq"
        app:layout_constraintTop_toBottomOf="@+id/tilNombre">

        <EditText
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fecha_nacimiento"
            android:inputType="date"
            android:singleLine="true"
            android:onClick="showDatePicker"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen_izq"
        app:layout_constraintTop_toBottomOf="@id/tilFecha">

        <EditText
                android:id="@+id/tvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/telefono"
                android:singleLine="true" />
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen_izq"
        app:layout_constraintTop_toBottomOf="@id/tilTelefono">

        <EditText
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/correo"
                android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvCampoObligatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campo_obligatorio"
        android:textSize="@dimen/nota_al_pie"
        app:layout_constraintBottom_toTopOf="@id/btnSiguiente"/>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        android:text="@string/btn_siguiente"/>

</android.support.constraint.ConstraintLayout>
